force-app/main/default/objects/Loan_Application__c/fields/RM_Name__c.field-meta.xml
<CustomField>
    <fullName>RM_Name__c</fullName>
    <formula>Ro_RM__r.FirstName +&apos; &apos;+  Ro_RM__r.MiddleName + &apos; &apos; +  Ro_RM__r.LastName + &apos;(&apos; + Ro_RM__r.UserRole.Name + &apos;)&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RM Name</label>
    <type>Text</type>
</CustomField>