force-app/main/default/objects/Loan_Application__c/fields/Ro_RM__c.field-meta.xml
<CustomField>
    <fullName>Ro_RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RO/RM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Loan_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>