force-app/main/default/objects/Loan_Application__c/fields/ROI__c.field-meta.xml
<CustomField>
    <fullName>ROI__c</fullName>
    <label>ROI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>