force-app/main/default/objects/Loan_Application__c/fields/Send_Back__c.field-meta.xml
<CustomField>
    <fullName>Send_Back__c</fullName>
    <label>Send Back Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>