force-app/main/default/objects/Loan_Application__c/fields/Shared_with_Managers__c.field-meta.xml
<CustomField>
    <fullName>Shared_with_Managers__c</fullName>
    <description>It helps to determine which direct and indirect managers can view the record.</description>
    <formula>OR(CONTAINS(Manager_IDs__c,  $User.Id ),$Setup.Bypass_Validations__c.Bypass_Validation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>USED FOR BACKEND ONLY</inlineHelpText>
    <label>Shared with Managers</label>
    <type>Checkbox</type>
</CustomField>