force-app/main/default/objects/Loan_Application__c/fields/Strength__c.field-meta.xml
<CustomField>
    <fullName>Strength__c</fullName>
    <label>Strength</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>