force-app/main/default/objects/Loan_Application__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PSL_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Farm Credit (1100)</fullName>
            </value>
            <value>
                <fullName>Agriculture Infrastructure (1200)</fullName>
            </value>
            <value>
                <fullName>Ancillary Activities (1300),</fullName>
            </value>
            <value>
                <fullName>Micro Enterprises (2100)</fullName>
            </value>
            <value>
                <fullName>Small Enterprises (2200)</fullName>
            </value>
            <value>
                <fullName>Medium Enterprises (2300)</fullName>
            </value>
            <value>
                <fullName>Pre Shipment Export Credit (3100)</fullName>
            </value>
            <value>
                <fullName>Post Shipment Export Credit (3200)</fullName>
            </value>
            <value>
                <fullName>Education Loans upto 10 Lakh (4100)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>