force-app/main/default/objects/Loan_Application__c/fields/Subsub_category__c.field-meta.xml
<CustomField>
    <fullName>Subsub_category__c</fullName>
    <label>Sub-sub category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Crop Loans (1110)</fullName>
            </value>
            <value>
                <fullName>Loan for Investment Credit (1120)</fullName>
            </value>
            <value>
                <fullName>Loan for Allied Activities (1130)</fullName>
            </value>
            <value>
                <fullName>Other Agriculture Loans (1140)</fullName>
            </value>
            <value>
                <fullName>Loans_for_construction_of_storage_facilities_(Warehouses_market_yards_godowns)_cold_storage_(1210)</fullName>
                <label>Loans for construction of storage facilities (Warehouses, market yards, godowns), cold storage (1210)</label>
            </value>
            <value>
                <fullName>Loan for Soil conservation and watershed (1220)</fullName>
            </value>
            <value>
                <fullName>Loan for Plant tissue culture &amp; Agri Biotechnology (1230)</fullName>
            </value>
            <value>
                <fullName>Seed Production (1240)</fullName>
            </value>
            <value>
                <fullName>Production of Bio-Pesticide &amp; Bio Fertilizers, Vermi- Composting (1250)</fullName>
            </value>
            <value>
                <fullName>Loans to Co-operative Societies (1310)</fullName>
            </value>
            <value>
                <fullName>Loan for setting up Agri Clinics &amp;  Agri Business Centres (1320)</fullName>
            </value>
            <value>
                <fullName>Loan for Food &amp; Agro Processing (Up to 100 Cr.) (1330)</fullName>
            </value>
            <value>
                <fullName>Loan to Manufacturing Enterprises [Investment upto 25 Lakh] (2110)</fullName>
            </value>
            <value>
                <fullName>Loan to Service Enterprises  [Investment upto 10 Lakh] (2120)</fullName>
            </value>
            <value>
                <fullName>Advances to Khadi &amp; Village Industries Sector [KVI] (2130)</fullName>
            </value>
            <value>
                <fullName>Overdraft upto 5000 in PMJDY accounts (2140)</fullName>
            </value>
            <value>
                <fullName>Loan to Manufacturing Enterprises [Investment &gt; 25 Lakh to 5 Cr.] (2210)</fullName>
            </value>
            <value>
                <fullName>Loan to Service Enterprises [Investment &gt; 10 Lakh to 2 Cr.] (2220)</fullName>
            </value>
            <value>
                <fullName>Loan to Manufacturing Enterprises [Investment &gt; 5 Cr to 10 Cr.] (2310)</fullName>
            </value>
            <value>
                <fullName>Loan to Service Enterprises [Investment &gt; 2 Cr to 5 Cr.] (2320)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>