force-app/main/default/objects/Loan_Application__c/recordTypes/DDE.recordType-meta.xml
<RecordType>
    <fullName>DDE</fullName>
    <active>true</active>
    <label>DDE</label>
</RecordType>