force-app/main/default/objects/Loan_Application__c/recordTypes/Disbursement_Initiated.recordType-meta.xml
<RecordType>
    <fullName>Disbursement_Initiated</fullName>
    <active>true</active>
    <label>Disbursement Initiated</label>
</RecordType>