force-app/main/default/objects/Loan_Application__c/recordTypes/Sanctioned_Undisbursed.recordType-meta.xml
<RecordType>
    <fullName>Sanctioned_Undisbursed</fullName>
    <active>true</active>
    <label>Sanctioned Undisbursed</label>
</RecordType>