force-app/main/default/objects/Loan_Application__c/recordTypes/Underwriting_Initiated.recordType-meta.xml
<RecordType>
    <fullName>Underwriting_Initiated</fullName>
    <active>true</active>
    <label>Underwriting Initiated</label>
</RecordType>