force-app/main/default/objects/Loan_Application__c/validationRules/Branch_Cannot_Editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Branch_Cannot_Editable</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND( ISPICKVAL(LOB__c , &apos;BL&apos;) , NOT(ISBLANK(PRIORVALUE(Branch__c) )), 
								IsChanged(Branch__c)
							)
, true,
false)</errorConditionFormula>
    <errorDisplayField>Branch__c</errorDisplayField>
    <errorMessage>You cannot change the branch.</errorMessage>
</ValidationRule>