force-app/main/default/objects/Loan_Application__c/validationRules/CM_UserAssignment.validationRule-meta.xml
<ValidationRule>
    <fullName>CM_UserAssignment</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.Bypass_Validations__c.Bypass_Validation__c), ISCHANGED(OwnerId), $User.Id &lt;&gt; OwnerId, PRIORVALUE( Current_Owner__c) = &apos;Credit Manager Queue&apos; )</errorConditionFormula>
    <errorMessage>You don&apos;t have access to assign to another user</errorMessage>
</ValidationRule>