force-app/main/default/objects/Loan_Application__c/validationRules/cpa_UserAssignment.validationRule-meta.xml
<ValidationRule>
    <fullName>cpa_UserAssignment</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.Bypass_Validations__c.Bypass_Validation__c), ISCHANGED(OwnerId), NOT( CONTAINS( $UserRole.Name , &quot;Credit Manager&quot;)), $User.Id &lt;&gt; OwnerId, PRIORVALUE( Current_Owner__c) =&apos;CPA Team Queue&apos; )</errorConditionFormula>
    <errorMessage>You don&apos;t have access to assign to another user</errorMessage>
</ValidationRule>