force-app/main/default/objects/Loan_Application__c/validationRules/Required_Moratorium_Period.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Moratorium_Period</fullName>
    <active>true</active>
    <errorConditionFormula>NOT($Setup.Bypass_Validations__c.Bypass_Validation__c)
&amp;&amp;
ISPICKVAL(Is_Moratorium_required__c , &apos;Yes&apos;) &amp;&amp; ISBLANK(TEXT(Moratorium_Period_Month__c))</errorConditionFormula>
    <errorMessage>Moratorium Period is Required, if you selected Moratorium as a Yes.</errorMessage>
</ValidationRule>