force-app/main/default/objects/Loan_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Branch__c</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>Loan_Application_Stage__c</columns>
    <columns>Loan_Application_Status__c</columns>
    <columns>BL_Product_Name__c</columns>
    <columns>Lead_Created_Date__c</columns>
    <columns>Owner_Full_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Loan Applications</label>
</ListView>