force-app/main/default/objects/Loan_Application__c/listViews/DDE_In_Queue_Loan_Applications.listView-meta.xml
<ListView>
    <fullName>DDE_In_Queue_Loan_Applications</fullName>
    <columns>NAME</columns>
    <columns>Loan_Application_Stage__c</columns>
    <columns>Loan_Application_Status__c</columns>
    <columns>Branch__c</columns>
    <columns>Amount__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Current_Owner__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>IsBranchHasCurrentUser__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>DDE Queue Loan Applications</label>
    <queue>BL_CPA_Queue</queue>
    <sharedTo>
        <role>BL_Branch_Credit_Manager</role>
        <role>BL_CPA</role>
    </sharedTo>
</ListView>