force-app/main/default/objects/Loan_Application__c/listViews/My_Open_Loan_Applications.listView-meta.xml
<ListView>
    <fullName>My_Open_Loan_Applications</fullName>
    <columns>NAME</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>Branch__c</columns>
    <columns>Loan_Application_Status__c</columns>
    <columns>Loan_Application_Stage__c</columns>
    <columns>BL_Product_Name__c</columns>
    <columns>Owner_Full_Name__c</columns>
    <columns>Lead_Created_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>IsBranchHasCurrentUser__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Shared_with_Managers__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Loan Applications</label>
</ListView>